--- a/English.lproj/FilesView.xib
+++ b/English.lproj/FilesView.xib
@@ -2027,6 +2027,9 @@
         <string key="NSReuseIdentifierKey">_NS:1109</string>
         <string key="NSClassName">NSView</string>
       </object>
+      <object class="NSCustomObject" id="1062102425">
+        <string key="NSClassName">PopupWindowController</string>
+      </object>
     </object>
     <object class="IBObjectContainer" key="IBDocument.Objects">
       <object class="NSMutableArray" key="connectionRecords">
@@ -2948,30 +2951,6 @@
           <int key="connectionID">372</int>
         </object>
         <object class="IBConnectionRecord">
-          <object class="IBOutletConnection" key="connection">
-            <string key="label">preferencesViewForAttachedWindow</string>
-            <reference key="source" ref="453712496"/>
-            <reference key="destination" ref="954096192"/>
-          </object>
-          <int key="connectionID">381</int>
-        </object>
-        <object class="IBConnectionRecord">
-          <object class="IBOutletConnection" key="connection">
-            <string key="label">DifferencesViewTogglePreferences</string>
-            <reference key="source" ref="453712496"/>
-            <reference key="destination" ref="915324028"/>
-          </object>
-          <int key="connectionID">382</int>
-        </object>
-        <object class="IBConnectionRecord">
-          <object class="IBActionConnection" key="connection">
-            <string key="label">toggleAttachedDifferencesPreferencesWindow:</string>
-            <reference key="source" ref="1003"/>
-            <reference key="destination" ref="915324028"/>
-          </object>
-          <int key="connectionID">383</int>
-        </object>
-        <object class="IBConnectionRecord">
           <object class="IBActionConnection" key="connection">
             <string key="label">differencesDisplayPreferencesChanged:</string>
             <reference key="source" ref="453712496"/>
@@ -3050,6 +3029,38 @@
             <reference key="destination" ref="264801874"/>
           </object>
           <int key="connectionID">396</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBOutletConnection" key="connection">
+            <string key="label">displayButton</string>
+            <reference key="source" ref="1062102425"/>
+            <reference key="destination" ref="915324028"/>
+          </object>
+          <int key="connectionID">398</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBOutletConnection" key="connection">
+            <string key="label">fileDifferencesPreferencesPopup</string>
+            <reference key="source" ref="453712496"/>
+            <reference key="destination" ref="1062102425"/>
+          </object>
+          <int key="connectionID">402</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBActionConnection" key="connection">
+            <string key="label">toggleAttachedPopupWindow:</string>
+            <reference key="source" ref="1062102425"/>
+            <reference key="destination" ref="915324028"/>
+          </object>
+          <int key="connectionID">403</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBOutletConnection" key="connection">
+            <string key="label">popupContentView</string>
+            <reference key="source" ref="1062102425"/>
+            <reference key="destination" ref="954096192"/>
+          </object>
+          <int key="connectionID">404</int>
         </object>
       </object>
       <object class="IBMutableOrderedSet" key="objectRecords">
@@ -4142,6 +4153,11 @@
             <reference key="object" ref="982284372"/>
             <reference key="parent" ref="68652209"/>
           </object>
+          <object class="IBObjectRecord">
+            <int key="objectID">397</int>
+            <reference key="object" ref="1062102425"/>
+            <reference key="parent" ref="0"/>
+          </object>
         </object>
       </object>
       <object class="NSMutableDictionary" key="flattenedProperties">
@@ -4336,6 +4352,7 @@
           <string>38.IBPluginDependency</string>
           <string>380.IBPluginDependency</string>
           <string>39.IBPluginDependency</string>
+          <string>397.IBPluginDependency</string>
           <string>40.IBPluginDependency</string>
           <string>43.IBPluginDependency</string>
           <string>44.IBPluginDependency</string>
@@ -4727,6 +4744,7 @@
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+          <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
           <string>{{540, 731}, {322, 383}}</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -4753,7 +4771,7 @@
         </object>
       </object>
       <nil key="sourceID"/>
-      <int key="maxID">396</int>
+      <int key="maxID">404</int>
     </object>
     <object class="IBClassDescriber" key="IBDocument.Classes">
       <object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -5240,15 +5258,14 @@
             <bool key="EncodedWithXMLCoder">YES</bool>
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>DifferencesViewTogglePreferences</string>
               <string>FilesViewBrowserSegement</string>
               <string>FilesViewOutlineSegement</string>
               <string>FilesViewTableSegement</string>
               <string>concertinaView</string>
+              <string>fileDifferencesPreferencesPopup</string>
               <string>nodeIconWell</string>
               <string>nodeInspector</string>
               <string>parentContoller</string>
-              <string>preferencesViewForAttachedWindow</string>
               <string>statusSidebarSplitView</string>
               <string>theFSViewer</string>
             </object>
@@ -5257,12 +5274,11 @@
               <string>NSButton</string>
               <string>NSButton</string>
               <string>NSButton</string>
-              <string>NSButton</string>
               <string>JHConcertinaView</string>
+              <string>PopupWindowController</string>
               <string>NSImageView</string>
               <string>NSTextField</string>
               <string>FilesViewController</string>
-              <string>NSView</string>
               <string>StatusSidebarSplitView</string>
               <string>FSViewer</string>
             </object>
@@ -5271,24 +5287,19 @@
             <bool key="EncodedWithXMLCoder">YES</bool>
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>DifferencesViewTogglePreferences</string>
               <string>FilesViewBrowserSegement</string>
               <string>FilesViewOutlineSegement</string>
               <string>FilesViewTableSegement</string>
               <string>concertinaView</string>
+              <string>fileDifferencesPreferencesPopup</string>
               <string>nodeIconWell</string>
               <string>nodeInspector</string>
               <string>parentContoller</string>
-              <string>preferencesViewForAttachedWindow</string>
               <string>statusSidebarSplitView</string>
               <string>theFSViewer</string>
             </object>
             <object class="NSMutableArray" key="dict.values">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <object class="IBToOneOutletInfo">
-                <string key="name">DifferencesViewTogglePreferences</string>
-                <string key="candidateClassName">NSButton</string>
-              </object>
               <object class="IBToOneOutletInfo">
                 <string key="name">FilesViewBrowserSegement</string>
                 <string key="candidateClassName">NSButton</string>
@@ -5306,6 +5317,10 @@
                 <string key="candidateClassName">JHConcertinaView</string>
               </object>
               <object class="IBToOneOutletInfo">
+                <string key="name">fileDifferencesPreferencesPopup</string>
+                <string key="candidateClassName">PopupWindowController</string>
+              </object>
+              <object class="IBToOneOutletInfo">
                 <string key="name">nodeIconWell</string>
                 <string key="candidateClassName">NSImageView</string>
               </object>
@@ -5316,10 +5331,6 @@
               <object class="IBToOneOutletInfo">
                 <string key="name">parentContoller</string>
                 <string key="candidateClassName">FilesViewController</string>
-              </object>
-              <object class="IBToOneOutletInfo">
-                <string key="name">preferencesViewForAttachedWindow</string>
-                <string key="candidateClassName">NSView</string>
               </object>
               <object class="IBToOneOutletInfo">
                 <string key="name">statusSidebarSplitView</string>
@@ -6279,6 +6290,65 @@
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
             <string key="majorKey">IBProjectSource</string>
             <string key="minorKey">Classes/PatchesModel/PatchesWebview.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">PopupWindowController</string>
+          <string key="superclassName">NSObject</string>
+          <object class="NSMutableDictionary" key="actions">
+            <string key="NS.key.0">toggleAttachedPopupWindow:</string>
+            <string key="NS.object.0">id</string>
+          </object>
+          <object class="NSMutableDictionary" key="actionInfosByName">
+            <string key="NS.key.0">toggleAttachedPopupWindow:</string>
+            <object class="IBActionInfo" key="NS.object.0">
+              <string key="name">toggleAttachedPopupWindow:</string>
+              <string key="candidateClassName">id</string>
+            </object>
+          </object>
+          <object class="NSMutableDictionary" key="outlets">
+            <bool key="EncodedWithXMLCoder">YES</bool>
+            <object class="NSArray" key="dict.sortedKeys">
+              <bool key="EncodedWithXMLCoder">YES</bool>
+              <string>displayButton</string>
+              <string>popupContentView</string>
+            </object>
+            <object class="NSMutableArray" key="dict.values">
+              <bool key="EncodedWithXMLCoder">YES</bool>
+              <string>NSButton</string>
+              <string>NSView</string>
+            </object>
+          </object>
+          <object class="NSMutableDictionary" key="toOneOutletInfosByName">
+            <bool key="EncodedWithXMLCoder">YES</bool>
+            <object class="NSArray" key="dict.sortedKeys">
+              <bool key="EncodedWithXMLCoder">YES</bool>
+              <string>displayButton</string>
+              <string>popupContentView</string>
+            </object>
+            <object class="NSMutableArray" key="dict.values">
+              <bool key="EncodedWithXMLCoder">YES</bool>
+              <object class="IBToOneOutletInfo">
+                <string key="name">displayButton</string>
+                <string key="candidateClassName">NSButton</string>
+              </object>
+              <object class="IBToOneOutletInfo">
+                <string key="name">popupContentView</string>
+                <string key="candidateClassName">NSView</string>
+              </object>
+            </object>
+          </object>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBProjectSource</string>
+            <string key="minorKey">Classes/UtilityClasses/PopupWindowController/PopupWindowController.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">PopupWindowController</string>
+          <string key="superclassName">NSObject</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBUserSource</string>
+            <string key="minorKey"/>
           </object>
         </object>
         <object class="IBPartialClassDescription">
