- Make all anchors use the shifted class which makes the anchor open not right at the top   of the page but a little lower.  This leaves room for the header which runs across the   top of the page.

--- a/MacHgHelp/sty/task.css
+++ b/MacHgHelp/sty/task.css
@@ -145,6 +145,15 @@ a.linkarrow:hover {
 	margin-bottom: 18px;
 }
 
+a.shifted {
+    width:0px;
+    height:0px;
+    white-space:pre;
+    float:left;
+    clear:both;
+    position:relative;
+    bottom:50px;
+}
 
 
 /* @end */
